# mlx_screendescribe

./: .gitignore  Agents.md  README.md  bootstrap.py  config.py  main.py  menu_bar.py  pyproject.toml  requirements.txt  zip.sh
src/: __init__.py  log_viewer.py  logging_service.py  model_inference.py  progress_window.py  scheduler.py  screenshot.py  status_service.py  tracking.py
